# math-lab

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
experiments/2026-02-19-umap-vs-local-pca-on-swiss-roll/: README.md  run.py
experiments/2026-02-19-umap-vs-local-pca-on-swiss-roll/data/: README.md
experiments/_template/: README.md  run.py
tools/: new_exp.py
